--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -14,9 +14,9 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Just like many other programming languages out there, Python's functionality builds on so-called `programming paradigms`. While some languages may require you to use a certain paradigm, others allow for more than one paradigm in your code.\n",
+    "Just like many other programming languages out there, Python's functionality builds on so-called __programming paradigms__. While some languages may require you to use a certain paradigm, others allow for more than one paradigm in your code.\n",
     "\n",
-    "Python is mostly referred to as an `object-oriented` programming language, implying that only `Object-Oriented Programming (OOP)` - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
+    "Python is mostly referred to as an __object-oriented__ programming language, implying that only Object-Oriented Programming (OOP - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
     "\n",
     "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that each of them would do the trick.    \n",
     "\n"
@@ -44,7 +44,7 @@
    "source": [
     "### Procedural\n",
     "\n",
-    "The `procedural` paradigm might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The state of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
+    "The __procedural__ paradigm might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The state of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
     "  \n",
     "However, the longer and more complex a code, the more difficult it gets to stay on top of things. For example, a programmer would always have to know which variable names he already used because accidentally assigning a value to an existing variable may cause problems down the line. Finally, reusing a program that follows the procedural paradigm is often not that easy and requires you to code up every step again.\n"
    ]
@@ -55,7 +55,7 @@
    "source": [
     "### Functional\n",
     "\n",
-    "While the procedural paradigm follows a step by step approach, the `functional` paradigm solves a task by executing a series of functions. In this case, the state of a variable is changed by applying a function to it. The definition of the function happens strictly seperate from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
+    "While the procedural paradigm follows a step by step approach, the __functional__ paradigm solves a task by executing a series of functions. In this case, the state of a variable is changed by applying a function to it. The definition of the function happens strictly seperate from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
     "\n",
     "This reusability makes the code a lot shorter. However, one will have to look up the function definition to understand what it does and how it changes the state of the variable. Additionally, when working with imported functions there is always the possibility of unwanted changes to their functionality. If the package creators decide to change said function, this will affect your program too.\n",
     "\n",
@@ -68,7 +68,7 @@
    "source": [
     "### Object Oriented\n",
     "\n",
-    "The `object-oriented` programming paradigm is built on the notion of classes and objects. These objects are similar to real life objects and all objects of the same class share certain attributes (states) or methods (functionalities). However, each object can also have personal attributes, just like one jacket might be red and the other one might be green, they both have the ability to keep you warm though.\n",
+    "The __object-oriented__ programming paradigm is built on the notion of classes and objects. These objects are similar to real life objects and all objects of the same class share certain attributes (states) or methods (functionalities). However, each object can also have personal attributes, just like one jacket might be red and the other one might be green, they both have the ability to keep you warm though.\n",
     "\n",
     "As you see, with OOP state and function are no longer separated but happen both within the object. The problem at hand is then solved through the interaction between the different objects. For example, if you, as a human object, are cold you could put on the jacket object to solve that problem. The fact, that OOP basically mimicks the real world, makes it easier to understand and since these objects are whole in themselves, they can easily be used in different applications. \n",
     "\n"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +156,7 @@
     "def specify_model(model_name):\n",
     "    # specify the model locally\n",
     "    model = model_name\n",
+    "    \n",
     "    # show the specified model\n",
     "    print(\"The model under construction is: {}\".format(model))\n",
     "    \n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,9 +302,8 @@
     "    Returns a list containing the car's specifications. \n",
     "\n",
     "    \"\"\"\n",
-    "\n",
     "    car_attr = [name, colors, hp, length, width]\n",
-    "\n",
+    "    \n",
     "    print(\"The {} has the following specifications:\".format(name))\n",
     "    print(\"Available colours: {}\".format(colors))\n",
     "    print(\"HP: {}\".format(hp))\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -438,21 +438,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Defining the Functionality"
+    "### 3. Defining the Functionality\n",
+    "\n",
+    "In order to finalize the car, specific methods that define the car's functionality have to be implemented - exemplary, in our case the driving function."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Procedural"
+    "#### Procedural\n",
+    "In the procedural way, the car's driving function is executed through a simple print statement. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model X is driving\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating the Construction Plan\n",
     "car = 'Model X'\n",
@@ -471,12 +482,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functional"
+    "#### Functional\n",
+    "For the functional paradigm, the function `drive` is implemented in the same way that the car's attributes are defined. Within the `drive` function, a simple print statement is used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,10 +496,17 @@
     "car = 'Model X'\n",
     "\n",
     "# Defining the Attributes\n",
-    "car_colors = ['red', 'white', 'black']\n",
-    "car_hp = 120\n",
-    "car_length_m = 3\n",
-    "car_width_m = 1.5\n",
+    "def car_attr(name, colors, hp, length, width):\n",
+    "\n",
+    "    car_attr = [name, colors, hp, length, width]\n",
+    "\n",
+    "    print(\"The {} has the following specifications:\".format(name))\n",
+    "    print(\"Available colours: {}\".format(colors))\n",
+    "    print(\"HP: {}\".format(hp))\n",
+    "    print(\"Length: {}\".format(length))\n",
+    "    print(\"Width: {}\".format(width))\n",
+    "\n",
+    "    return car_attr\n",
     "\n",
     "# Defining the Functionality\n",
     "def drive(car):\n",
@@ -495,19 +514,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model X is driving.\n"
+     ]
+    }
+   ],
+   "source": [
+    "drive(car)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "Methods describe the behavior of the objects of a class. They represent the operations (actions) that can be performed on the objects of the class. The execution of a method can lead to change the state of the object. They are defined in the same way as normal functions but must be declared within the class and their first argument always refers to the calling instance, thus methods are said to be functions, attached to objects. The first parameter of the method is by convention the name self.\n",
+    "Instance methods describe the functions of the objects of a class. They represent the operations (actions) that can be performed on these objects, and only these object. In other words, the defined functions cannot be called from  instances other than the ones of that specific class. The execution of a method can lead to a change of the state of the object. \n",
     "\n",
-    "If the object is a car, the methods can be: drive, park, etc. \n",
+    "Methods are defined in the same way as normal functions but must be declared within the body of the class. Their first argument always refers to the calling instance, thus methods are said to be functions, attached to objects. Similar to the `__innit__` method, the first parameter of the method is by convention always the name self.\n",
+    "`.drive()` has one additional parameter called mph and returns a string containing the car’s state (driving) and the velocity in mph. Of course, you could also implement a method that only uses the self parameter. Naturally, other methods regarding the car example could be: braking, parking, etc. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,23 +563,15 @@
     "        self.state = \"off\"  # find a better initial state\n",
     "        self.lights = False\n",
     "\n",
-    "    # Defining the Functionality\n",
-    "    def drive(self):\n",
+    "    # Defining the Functionalities\n",
+    "    def drive(self, mph):\n",
     "        self.state = \"driving\"\n",
-    "        print(\"{} is {}.\".format(self.name, self.state))\n",
-    "\n",
-    "    \n",
-    "    def lights_on(self):\n",
-    "        self.lights = True\n",
-    "        print(self.lights)  # better print statement?\n",
-    "        \n",
-    "    ## Brake\n",
-    "    ## lights off"
+    "        print(\"{} is {} with {} mph.\".format(self.name, self.state, mph))        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,35 +580,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Model X is driving with 100 mph.\n"
      ]
     }
    ],
    "source": [
-    "Model_X.lights_on()"
+    "Model_X.drive(100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WRITE SOMETHING ABOUT WHAT WE HAVE SO FAR\n",
+    "We have now specified the car, defined some attributes and finally added a functionality in all three programming paradigms. `Model_X` is now completed. \n",
+    "Especially reagrding the object oriented programming, you have learnt how to:\n",
+    "- Define a class\n",
+    "- Instantiate an object\n",
+    "- Define attributes \n",
+    "- Define methods\n",
+    "\n",
+    "In the following, a second car will be built in order to illustrate the benefits of the individual paradigms in different situations.\n",
     "\n",
     "<img src=\"imgs/06_blueprint_functionality.png\" width=\"400\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What did we do so far???"
    ]
   },
   {
@@ -637,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
