Building a different car
Using OOP, I left out the other paradigms and the inheritance. Inheritance would have meant to redefine a lot of other things above. Because obviously what our class could inherit from would be a Car class... but we already called our class Car... :)

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Just like many other programming languages out there, Python's functionality builds on so-called __programming paradigms__. While some languages may require you to use a certain paradigm, others allow for more than one paradigm in your code.\n",
     "\n",
-    "Python is mostly referred to as an __object-oriented__ programming language, implying that only Object-Oriented Programming (OOP - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
+    "Python is mostly referred to as an __object-oriented__ programming language, implying that only Object-Oriented Programming (OOP) - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
     "\n",
     "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that each of them would do the trick.    \n",
     "\n"
@@ -70,7 +70,7 @@
     "\n",
     "The __object-oriented__ programming paradigm is built on the notion of classes and objects. These objects are similar to real life objects and all objects of the same class share certain attributes (states) or methods (functionalities). However, each object can also have personal attributes, just like one jacket might be red and the other one might be green, they both have the ability to keep you warm though.\n",
     "\n",
-    "As you see, with OOP state and function are no longer separated but happen both within the object. The problem at hand is then solved through the interaction between the different objects. For example, if you, as a human object, are cold you could put on the jacket object to solve that problem. The fact, that OOP basically mimicks the real world, makes it easier to understand and since these objects are whole in themselves, they can easily be used in different applications. \n",
+    "As you see, with OOP state and function are no longer separated but happen both within the object. The problem at hand is then solved through the interaction between the different objects. For example, if you, as a human object, are cold you could put on the jacket object to solve that problem. The fact, that OOP basically mimicks the real world, makes it easier to understand and since these objects are whole in themselves, they can easily be reused in different applications. \n",
     "\n"
    ]
   },
@@ -112,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "The model under construction is: Model X\n"
      ]
@@ -141,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "The model under construction is: Model X\n"
      ]
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The model under construction is: <__main__.Car object at 0x104e477c0>\n"
+      "The model under construction is: <__main__.Car object at 0x7fccf7874e50>\n"
      ]
     }
    ],
@@ -254,17 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Having a look at the Model X first\n",
     "\n",
     "modelX_name = \"Model X\"\n",
     "modelX_colors = ['red', 'white', 'black']\n",
-    "modelX_hp = 120\n",
-    "modelX_length = 3\n",
-    "modelX_width = 1.5\n",
+    "modelX_hp = 443\n",
+    "modelX_length = 5.04\n",
+    "modelX_width = 2.27\n",
     "\n",
     "# technically using the format thingy is also kinda using a function... \n",
     "print(\"The {} has the following specifications:\".format(modelX_name))\n",
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,18 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The Model X has the following specifications:\n",
-      "Available colours: ['red', 'white', 'black']\n",
-      "HP: 120\n",
-      "Length: 3\n",
-      "Width: 1.5\n"
+      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
      ]
     }
    ],
@@ -334,25 +338,25 @@
     "# Now we can use it with the Model X specifications\n",
     "modelX_attr = car_attr(name=\"Model X\", \n",
     "                         colors=['red', 'white', 'black'], \n",
-    "                         hp=120, \n",
-    "                         length=3, \n",
-    "                         width=1.5)\n"
+    "                         hp=443, \n",
+    "                         length=5.04, \n",
+    "                         width=2.27)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
    "source": [
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,27 +406,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Model X is a car by Tesla.\n",
-      "Model X has a length of 3m and a width of 1.5m.\n"
+      "Model X is a car by Tesla.\nModel X has a length of 3m and a width of 1.5m.\n"
      ]
     }
    ],
    "source": [
     "#instantiate the Car class with the Model X object\n",
-    "Model_X = Car(\"Model X\", ['red', 'white', 'black'],120,3,1.5)\n",
+    "Model_X = Car(name=\"Model X\", \n",
+    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
+    "              hp=443,\n",
+    "              length=5.04,\n",
+    "              width=2.27)\n",
     "\n",
     "# access the class attributes\n",
-    "print(\"Model X is a car by {}.\".format(Model_X.brand))\n",
+    "print(\"The {} is a car by {}.\".format(Model_X.name, Model_X.brand))\n",
     "\n",
     "# access the instance attributes\n",
-    "print(\"Model X has a length of {}m and a width of {}m.\".format( Model_X.length, Model_X.width))"
+    "print(\"The {} has a length of {}m and a width of {}m.\".format(Model_X.name, Model_X.length, Model_X.width))"
    ]
   },
   {
@@ -457,8 +464,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Model X is driving\n"
      ]
@@ -470,9 +477,9 @@
     "\n",
     "# Defining the Attributes\n",
     "car_colors = ['red', 'white', 'black']\n",
-    "car_hp = 120\n",
-    "car_length_m = 3\n",
-    "car_width_m = 1.5\n",
+    "car_hp = 443\n",
+    "car_length_m = 5.04\n",
+    "car_width_m = 2.27\n",
     "\n",
     "# Defining the Functionality\n",
     "print(car, 'is driving')"
@@ -488,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,21 +578,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Model_X = Car(\"Model X\", ['red', 'white', 'black'],120,3,1.5)"
+    "Model_X = Car(name=\"Model X\", \n",
+    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
+    "              hp=443,\n",
+    "              length=5.04,\n",
+    "              width=2.27)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Model X is driving with 100 mph.\n"
      ]
@@ -626,8 +637,77 @@
    "metadata": {},
    "source": [
     "### Building a Different Car\n",
-    "- Inheritance\n",
-    "- Showing the advantage of OOP (reuising code parts)"
+    "\n",
+    "As mentioned above, a big advantage of OOP is its reusability. Classes can be reused for creating similar objects simply trough instantiating a new object of this class. Suppose we want to build Tesla's Model S now. The Model S has the same brand as the Model X, so the class attribute `brand` stays the same but the instance attributes: `name`, `colors`, `horsepower` (hp), `length`, `width`, etc. will have different values. \n",
+    "\n",
+    "Now, for building this diffent car all we have to do is reuse the syntax for instantiating an object and pass it the new values for the instance attributes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiating the Model S\n",
+    "Model_S = Car(name=\"Model S\", \n",
+    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"], \n",
+    "              hp=670,\n",
+    "              length=4.98,\n",
+    "              width=2.19)"
+   ]
+  },
+  {
+   "source": [
+    "See, how easy that was? We can now have a look a our new car's attributes:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model S is a car by Tesla.\nModel S has a length of 4.98m and a width of 2.19m.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing the class attributes\n",
+    "print(\"The {} is a car by {}.\".format(Model_S.name, Model_S.brand))\n",
+    "\n",
+    "# Accessing the instance attributes\n",
+    "print(\"The {} has a length of {}m and a width of {}m.\".format(Model_S.name, Model_S.length, Model_S.width))"
+   ]
+  },
+  {
+   "source": [
+    "The new object automatically gets all the class functionalities as well. For our `Model_S` this means that just like the `Model_X` it has the method `Model_S.drive(mph)`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Model S is driving with 100 mph.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calling class method Car.drive()\n",
+    "Model_S.drive(100)"
    ]
   },
   {
@@ -652,9 +732,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd00d4fd2bd1faf0472468780e9326b90d88c4670b491e4538f8b5ed3c174766762",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -666,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
