--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "### 2. Defining the Attributes\n",
     "\n",
-    "INTRODUCTORY SENTENCES"
+    "This chapter focuses on the individual characteristics that differentiate a car (Model X) from another by determining its appearance, condition or other qualities."
    ]
   },
   {
@@ -249,7 +249,7 @@
    "source": [
     "#### Procedural\n",
     "\n",
-    "EXPLAIN WHAT WE'RE DOING"
+    "In the same way as specifying the model, the attributes are specified simply by assigning the individual characteristics to a variable of choice:"
    ]
   },
   {
@@ -288,7 +288,8 @@
    "source": [
     "#### Functional\n",
     "\n",
-    "EXPLAIN WHAT'S GOING OOON"
+    "In functional paradigm, the individual characteristics of our Model X are specified by the function car_attr. \n",
+    "Firstly, we define the parameters of the newly created function car_attr. The parameters form the different car's attributes, in our case: name, colors, hp, length, width."
    ]
   },
   {
@@ -320,6 +321,13 @@
     "\n",
     "    return car_attr"
    ]
+  },
+  {
+   "source": [
+    "Secondly, once the function is created, we can use it by assigning the specific characteristics to our Model X."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -436,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WRITE STH ABOUT WHAT WE HAVE SO FAR.\n",
+    "Our Model X is starting to have a physical appearance thanks to the individual characteristics assigned to it such as its color or width. However, our car still lacks some functionalities to be usable (such as driving).  \n",
     "\n",
     "<img src=\"imgs/06_blueprint_attributes.png\" width=\"400\">"
    ]
