--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -249,7 +249,7 @@
    "source": [
     "#### Procedural\n",
     "\n",
-    "In the same way as specifying the model, the attributes are specified simply by assigning the individual characteristics to a variable of choice:"
+    "In the same way as in specifying the model, the attributes are specified simply by assigning the individual characteristics to a variable of choice:"
    ]
   },
   {
