--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -116,8 +116,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The model under construction is: Model X\n"
      ]
@@ -145,8 +145,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The model under construction is: Model X\n"
      ]
@@ -174,7 +174,7 @@
     "#### Object Oriented\n",
     "And lastly, turning our viewpoint to the object oriented paradigm:\n",
     "\n",
-    "A class is like a blueprint for an object. Later in this tutorial you will see that a class specifies all the details of an object derived from that class. In the code below, the ````class```` keyword is used to define an empty class ````Car````. Any intended code that follows the colon after the class definition represents the body of the class. For now, the ````pass```` statement is used as a placeholder to indicate where code in later steps will eventually go. It allows you to run the code without any errors."
+    "A class is like a blueprint for an object. Later in this tutorial you will see that a class specifies all the details of an object derived from that class. In the code below, the ````class```` keyword is used to define an empty class ````Car````. Any indented code that follows the colon after the class definition represents the body of the class. For now, the ````pass```` statement is used as a placeholder to indicate where code in later steps will eventually go. It allows you to run the code without any errors."
    ]
   },
   {
@@ -202,8 +202,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The model under construction is: <__main__.Car object at 0x7fccf7874e50>\n"
      ]
@@ -258,28 +258,29 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+      "The Model X has the following specifications:\n",
+      "Available colours: ['red', 'white', 'black']\n",
+      "HP: 120\n",
+      "Length: 3\n",
+      "Width: 1.5\n"
      ]
     }
    ],
    "source": [
-    "# Having a look at the Model X first\n",
-    "\n",
     "modelX_name = \"Model X\"\n",
     "modelX_colors = ['red', 'white', 'black']\n",
     "modelX_hp = 443\n",
     "modelX_length = 5.04\n",
     "modelX_width = 2.27\n",
     "\n",
-    "# technically using the format thingy is also kinda using a function... \n",
     "print(\"The {} has the following specifications:\".format(modelX_name))\n",
     "print(\"Available colours: {}\".format(modelX_colors))\n",
     "print(\"HP: {}\".format(modelX_hp))\n",
     "print(\"Length: {}\".format(modelX_length))\n",
-    "print(\"Width: {}\".format(modelX_width))\n"
+    "print(\"Width: {}\".format(modelX_width))"
    ]
   },
   {
@@ -288,8 +289,8 @@
    "source": [
     "#### Functional\n",
     "\n",
-    "In functional paradigm, the individual characteristics of our Model X are specified by the function car_attr. \n",
-    "Firstly, we define the parameters of the newly created function car_attr. The parameters form the different car's attributes, in our case: name, colors, hp, length, width."
+    "In functional paradigm, the individual characteristics of our Model X are specified by the function `car_attr`. \n",
+    "Firstly, we define the parameters of the newly created function `car_attr`. The parameters form the different car's attributes, in our case: name, colors, hp, length, width."
    ]
   },
   {
@@ -298,13 +299,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Laura's try\n",
-    "\n",
-    "# As we've seen in the prodedrual way of doing this, there are a lot of redundancies. \n",
-    "# Meaning, that we write a lot of similar code multiple times. \n",
-    "# Clearly this doesn't scale, so a way of approaching this could be to define a function\n",
-    "# The function will take the car specific values as inputs\n",
-    "\n",
     "def car_attr(name, colors, hp, length, width):\n",
     "    \"\"\"\n",
     "    Prints the specifications.\n",
@@ -323,11 +317,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Secondly, once the function is created, we can use it by assigning the specific characteristics to our Model X."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -335,40 +329,23 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "The Model X has the following specifications:\nAvailable colours: ['red', 'white', 'black']\nHP: 120\nLength: 3\nWidth: 1.5\n"
+      "The Model X has the following specifications:\n",
+      "Available colours: ['red', 'white', 'black']\n",
+      "HP: 120\n",
+      "Length: 3\n",
+      "Width: 1.5\n"
      ]
     }
    ],
    "source": [
-    "# Now we can use it with the Model X specifications\n",
     "modelX_attr = car_attr(name=\"Model X\", \n",
     "                         colors=['red', 'white', 'black'], \n",
     "                         hp=443, \n",
     "                         length=5.04, \n",
-    "                         width=2.27)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "modelX_attr"
+    "                         width=2.27)"
    ]
   },
   {
@@ -418,10 +395,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Model X is a car by Tesla.\nModel X has a length of 3m and a width of 1.5m.\n"
+      "Model X is a car by Tesla.\n",
+      "Model X has a length of 3m and a width of 1.5m.\n"
      ]
     }
    ],
@@ -472,15 +450,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model X is driving\n"
      ]
     }
    ],
    "source": [
-    "# Creating the Construction Plan\n",
+    "# Specifying the model\n",
     "car = 'Model X'\n",
     "\n",
     "# Defining the Attributes\n",
@@ -490,6 +468,7 @@
     "car_width_m = 2.27\n",
     "\n",
     "# Defining the Functionality\n",
+    "mph = 100\n",
     "print(car, 'is driving')"
    ]
   },
@@ -524,8 +503,8 @@
     "    return car_attr\n",
     "\n",
     "# Defining the Functionality\n",
-    "def drive(car):\n",
-    "    print(car, 'is driving.')"
+    "def drive(car, mph):\n",
+    "    print(\"{}is driving at {}\".format{car, mph})"
    ]
   },
   {
@@ -542,7 +521,7 @@
     }
    ],
    "source": [
-    "drive(car)"
+    "drive(car, 100)"
    ]
   },
   {
@@ -603,8 +582,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model X is driving with 100 mph.\n"
      ]
@@ -634,16 +613,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building the Car\n",
-    "- Procedural: Car is built and driving instantly\n",
-    "- Functional: Car is built instantly but not driving\n",
-    "- OOP: Car has to be built explicitly "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Building a Different Car\n",
     "\n",
     "As mentioned above, a big advantage of OOP is its reusability. Classes can be reused for creating similar objects simply trough instantiating a new object of this class. Suppose we want to build Tesla's Model S now. The Model S has the same brand as the Model X, so the class attribute `brand` stays the same but the instance attributes: `name`, `colors`, `horsepower` (hp), `length`, `width`, etc. will have different values. \n",
@@ -666,11 +635,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "See, how easy that was? We can now have a look a our new car's attributes:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -678,10 +647,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Model S is a car by Tesla.\nModel S has a length of 4.98m and a width of 2.19m.\n"
+      "Model S is a car by Tesla.\n",
+      "Model S has a length of 4.98m and a width of 2.19m.\n"
      ]
     }
    ],
@@ -694,11 +664,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The new object automatically gets all the class functionalities as well. For our `Model_S` this means that just like the `Model_X` it has the method `Model_S.drive(mph)`."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -706,8 +676,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Model S is driving with 100 mph.\n"
      ]
@@ -740,8 +710,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd00d4fd2bd1faf0472468780e9326b90d88c4670b491e4538f8b5ed3c174766762",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
