added links and toc

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -5,14 +5,25 @@
    "metadata": {},
    "source": [
     "# Procedural, Functional, and Objected-Oriented Programming Paradigms\n",
-    "1. TABLE OF CONTENTS"
+    "## TABLE OF CONTENTS\n",
+    "1. [Introduction](#introduction)<br>\n",
+    "2. [Overview of Programming Paradigms](#overview_of_pp)<br>\n",
+    "    2.1 [Procedural](#procedural)<br>\n",
+    "    2.2 [Functional](#functional)<br>\n",
+    "    2.3 [Object-Oriented](#object_oriented)<br>\n",
+    "3. [Example Case: Building a Car](#example_case)<br>\n",
+    "    3.1 [Specifying the Model](#specifying_the_model)<br>\n",
+    "    3.2 [Defining the Attributes](#defining_the_attributes)<br>\n",
+    "    3.3 [Defining the Functionality](#defining_the_functionality)<br>\n",
+    "    3.4 [Building a Different Car](#building_a_different_car)<br>\n",
+    "4. [Sources](#sources)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction <a class=\"anchor\" id=\"introduction\"></a>\n",
     "\n",
     "Just like many other programming languages out there, Python's functionality builds on so-called __programming paradigms__. While some languages may require you to use a certain paradigm, others allow for more than one paradigm in your code.\n",
     "\n",
@@ -26,14 +37,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview of Programming Paradigms \n",
+    "## Overview of Programming Paradigms <a class=\"anchor\" id=\"overview_of_pp\"></a>\n",
     "\n",
     "Now, what exactly are programming paradigms? Roughly speaking, a paradigm is a way of solving a problem. Each paradigm offers a different set of ideas to perform the task at hand. They follow a paradigm-specific approach, structure your code and control its execution.     \n",
     "\n",
     "The three main paradigms that are supported by Python are:  \n",
-    "1. [Procedural](###Procedural)  \n",
-    "2. [Functional](#functional_comparison)  \n",
-    "3. [Object-Oriented](#oop_comparison)\n",
+    "1. [Procedural](#procedural)<br>\n",
+    "2. [Functional](#functional)<br>\n",
+    "3. [Object-Oriented](#object_oriented)<br>\n",
     "\n",
     "They differ mainly in when and how the program assigns values to variables. Controlling this is important because it directly affects the manageability and reliability of the code. Chaotic, repetitive or copy-paste codes are more prone to mistakes, difficult to read and hard to maintain. Programming paradigms assist you in writing well-structured code so that it remains comprehensible and concise.\n"
    ]
@@ -42,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Procedural\n",
+    "### Procedural <a class=\"anchor\" id=\"procedural\"></a>\n",
     "\n",
     "The __procedural__ paradigm might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The state of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
     "  \n",
@@ -53,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functional\n",
+    "### Functional <a class=\"anchor\" id=\"functional\"></a>\n",
     "\n",
     "While the procedural paradigm follows a step by step approach, the __functional__ paradigm solves a task by executing a series of functions. In this case, the state of a variable is changed by applying a function to it. The definition of the function happens strictly seperate from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
     "\n",
@@ -66,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Object Oriented\n",
+    "### Object Oriented <a class=\"anchor\" id=\"object_oriented\"></a>\n",
     "\n",
     "The __object-oriented__ programming paradigm is built on the notion of classes and objects. These objects are similar to real life objects and all objects of the same class share certain attributes (states) or methods (functionalities). However, each object can also have personal attributes, just like one jacket might be red and the other one might be green, they both have the ability to keep you warm though.\n",
     "\n",
@@ -78,17 +89,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example Case: Building a Car\n",
+    "## Example Case: Building a Car <a class=\"anchor\" id=\"example_case\"></a>\n",
     "In the following sub-chapters, the three different paradigms - procedural, functional and object oriented - will all be illustrated by the same example: the construction of the Model X car by the manufacturer Tesla. The aim of this chapter is to convey to the reader that the three paradigms are not completely different 'things', but rather allow a different perspective or approach to tackle one and the same problem. The example with the car, a simple everyday objcet, is used to convey the concepts of the three paradigms more easily. To get a better idea of the car, here is a picture of the original Model X by Tesla:\n",
     "\n",
     "![Markdown](imgs/06_model_x.png)\n",
     "\n",
     "The steps in the construction of the car are as follows: \n",
     "\n",
-    "1. [Specifying the Model](###)\n",
-    "2. [Defining the Car's Attributes](#)\n",
-    "3. [Defining the Car's Functionality](#)\n",
-    "4. [Completion of the Car](#)\n",
+    "1. [Specifying the Model](#specifying_the_model)<br>\n",
+    "2. [Defining the Attributes](#defining_the_attributes)<br>\n",
+    "3. [Defining the Functionality](#defining_the_functionality)<br>\n",
     "\n",
     "Note, if a string is printed in the following subchapters (e.g. \"Model X is driving\"), the implied action is considered to take place immediately."
    ]
@@ -97,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Specifying the Model\n",
+    "### 1. Specifying the Model <a class=\"anchor\" id=\"specifying_the_model\"></a>\n",
     "In this chapter, the exact model to be built is specified.\n",
     "In principle, it would also be possible to build another model instead of the Model X (for example, the Model S)."
    ]
@@ -238,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Defining the Attributes\n",
+    "### 2. Defining the Attributes <a class=\"anchor\" id=\"defining_the_attributes\"></a>\n",
     "\n",
     "This chapter focuses on the individual characteristics that differentiate a car (Model X) from another by determining its appearance, condition or other qualities."
    ]
@@ -431,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Defining the Functionality\n",
+    "### 3. Defining the Functionality <a class=\"anchor\" id=\"defining_the_functionality\"></a>\n",
     "\n",
     "In order to finalize the car, specific methods that define the car's functionality have to be implemented - exemplary, in our case the driving function."
    ]
@@ -613,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building a Different Car\n",
+    "### Building a Different Car <a class=\"anchor\" id=\"building_a_different_car\"></a>\n",
     "\n",
     "As mentioned above, a big advantage of OOP is its reusability. Classes can be reused for creating similar objects simply trough instantiating a new object of this class. Suppose we want to build Tesla's Model S now. The Model S has the same brand as the Model X, so the class attribute `brand` stays the same but the instance attributes: `name`, `colors`, `horsepower` (hp), `length`, `width`, etc. will have different values. \n",
     "\n",
@@ -692,12 +702,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sources\n",
+    "## Sources <a class=\"anchor\" id=\"sources\"></a>\n",
     "\n",
     "**Overview of Programming Paradigms**  \n",
     "\n",
-    "https://blog.newrelic.com/engineering/python-programming-styles/  \n",
-    "https://hackr.io/blog/procedural-programming   \n"
+    "* https://blog.newrelic.com/engineering/python-programming-styles/  \n",
+    "* https://hackr.io/blog/procedural-programming   \n",
+    "* https://t3n.de/news/tesla-rueckruf-touchscreen-1353586/\n",
+    "* https://www.freepik.com/free-photos-vectors/construction-blueprint"
    ]
   },
   {
@@ -724,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
