--- a/05_Basics_Of_Algorithm_Implementation.ipynb
+++ b/05_Basics_Of_Algorithm_Implementation.ipynb
@@ -18,7 +18,7 @@
     "7. [Performance measurement of sorting algorithms](#paragraph7)\n",
     "8. [Optimizing algorithm implementation performance](#paragraph8)\n",
     "9. [Further ideas for optimization](#paragraph9)\n",
-    "10. [Implementation issues](#paragraph10)\n",
+    "10. [Implementation issues](#paragraph10)\n"
 
    ]
   },
